Fetch a users' data, update HTTP status codes
